src/test/deca/syntax/invalid/Class.deca
//Description
//    Class au lieu de class
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

Class A{
}
